; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ocsp/extr_v3_ocsp.c_i2r_object.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ocsp/extr_v3_ocsp.c_i2r_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%*s\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*, i32)* @i2r_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2r_object(i32* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32*, i32** %8, align 8
  %11 = load i32, i32* %9, align 4
  %12 = call i64 @BIO_printf(i32* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %11, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  %13 = icmp sle i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %22

15:                                               ; preds = %4
  %16 = load i32*, i32** %8, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i64 @i2a_ASN1_OBJECT(i32* %16, i8* %17)
  %19 = icmp sle i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 0, i32* %5, align 4
  br label %22

21:                                               ; preds = %15
  store i32 1, i32* %5, align 4
  br label %22

22:                                               ; preds = %21, %20, %14
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i64 @BIO_printf(i32*, i8*, i32, i8*) #1

declare dso_local i64 @i2a_ASN1_OBJECT(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
